--- a/templates/components/pathfinder/_base.scss
+++ b/templates/components/pathfinder/_base.scss
@@ -10,7 +10,7 @@
 
     &.white {
       a {
-        background-color: rgba($white, 0.9);
+        background-color: rgba($white, .9);
         border-bottom: 3px solid $highlight;
         color: $black;
 
@@ -59,6 +59,9 @@
       background-color: transparent;
       padding-top: 0;
       text-align: center;
+      // -webkit-transform: translate3d(0, 0, 0);
+      // -webkit-transform-style: preserve-3d;
+      -webkit-font-smoothing: subpixel-antialiased;
     }
 
     strong {
@@ -90,7 +93,7 @@
       border-bottom: 3px solid darken($brand, 50%);
       margin: 0 auto;
       position: relative;
-      transition: all 200ms ease-out;
+      transition: all 150ms ease-out;
 
       strong,
       p {
@@ -105,6 +108,7 @@
         background-color: lighten($brand, 3%);
         box-shadow: 0 0 10px rgba($black, 0.5);
         transform: scale(1.06);
+        transition-timing-function: ease-in;
         z-index: 2;
 
         .button-small {
